# intelligent-data-platform

./: .gitignore  AIRFLOW_UI_GUIDE.md  DAY2_EXECUTION_SUMMARY.md  DAY4_EXECUTION_SUMMARY.md  README.md  README_OLD2.md  airflow_setup.sh  deploy_streaming.sh  deploy_streaming_external.sh  docker-compose.external.yml  pyproject.toml  run_complete_platform_demo.py  run_day1_demo.py  run_day2_demo.py  run_day3_demo.py  run_day4_demo.py  run_day5_demo.py  run_demo.py  run_integration_demo.py  setup_docker_external.sh  start_airflow_scheduler.sh  start_airflow_webserver.sh  test_day3_simulation.py  test_week4_standalone.py  verify_docker_setup.sh
.poetry-cache/artifacts/0c/32/76/babd6f3933e8a5f8c11c16cd581c3394e3aa9c8f735fa941ceae5d5636/: holidays-0.77-py3-none-any.whl
.poetry-cache/artifacts/0d/b2/bf/0f79db5bb2e51418fd4f500b77c7d2abaa891ec14e6be585d79baaa8df/: rich_click-1.8.9-py3-none-any.whl
.poetry-cache/artifacts/0d/bb/e7/71cd1c20fc5a76d4e54ae109e879dd1a52e7f4dabe35207f39a7319b7d/: debugpy-1.8.15-cp311-cp311-macosx_14_0_universal2.whl
.poetry-cache/artifacts/11/53/08/898beea51db565c9f6685434a88e8f9a5ce6cc7485d23fdafbdee554dd/: kiwisolver-1.4.8-cp311-cp311-macosx_11_0_arm64.whl
.poetry-cache/artifacts/11/75/58/8568fc152682b051db954376ed4307e71e757a011b2b5e6738cdf08a04/: opentelemetry_semantic_conventions-0.56b0-py3-none-any.whl
.poetry-cache/artifacts/26/ed/44/77cc5f168d9ad9d2b47ee6538ee5a20f1f70ced2c2e0bb7edea8a3d9eb/: category_encoders-2.8.1-py3-none-any.whl
.poetry-cache/artifacts/27/fb/e4/8f55dd8d86edaea53e476ea049552fb87bd3347d046efff714eb6e5bba/: featuretools-1.31.0-py3-none-any.whl
.poetry-cache/artifacts/28/b7/69/dc67e278b7f35f807b4c9546ec45a4c9e922b495ea95f5fbecc50ecc2f/: litestar_htmx-0.5.0-py3-none-any.whl
.poetry-cache/artifacts/2b/53/c0/62336ff773b02cbaae433eaa232ef82cb2fdba2a0d28df502075a87288/: ipykernel-6.30.0-py3-none-any.whl
.poetry-cache/artifacts/2b/d1/74/5436e307bc76d1ba1aa6f6491294dd7ec90724198c21f48d2b573c6ff8/: pyzmq-27.0.0-cp311-cp311-macosx_10_15_universal2.whl
.poetry-cache/artifacts/2c/2f/2d/1e0adb47c350ee84172be38a91923fdebf0e8b3e7207156ca852fbc549/: jupyter_lsp-2.2.6-py3-none-any.whl
.poetry-cache/artifacts/2f/43/70/2e7b2645648b4ab255f1265662a9d5e2f738a88554945aabc9df3d5022/: apache_airflow_providers_postgres-5.14.0-py3-none-any.whl
config/: feature_config.yaml  pipeline_config.yaml
dags/: data_ingestion_dag_day1.py  financial_data_pipeline_dag.py
data/: covid_hospital_database.db  financial_database.db  large_sample_database.db  sample_data.csv  sample_database.db
data/output/: covid_pipeline_report.json  financial_pipeline_report.json
docker/: docker-compose.yml  init-db.sql  prometheus.yml
notebooks/: day1_pipeline_demo.ipynb
reports/integration/: integration_summary_20250724_155341.md  integration_summary_20250724_161240.md  integration_summary_20250725_163912.md
src/: __init__.py
src/feature_store/: __init__.py  cache.py  registry.py  server.py  store.py
src/features/: __init__.py  feature_engine.py  generators.py
src/pipelines/: __init__.py  extractors.py  loaders.py  transformers.py  validation.py
src/quality/: data_validation.py  drift_detection.py  incident_response.py  quality_dashboard.py
src/streaming/: __init__.py  consumers.py  features.py  producers.py
summary/: DAY3_EXECUTION_SUMMARY.md  DAY5_EXECUTION_SUMMARY.md  README_OLD.md
tests/: test_day1_pipeline.py  test_streaming_integration.py
(+34 files in other folders)
